sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: type mismatch;
 found   : Boolean
 required: Int
    for(i<- 0 to fin){
                 ^AlgCocktailSort1:12: error: type mismatch;
 found   : Int(1)
 required: String
    for(i <- fin+1 to debut by -1){
                 ^AlgCocktailSort1:12: error: not found: value debut
    for(i <- fin+1 to debut by -1){
                      ^