sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var fin=false;
  while(fin==false){
    fin=true
    for(i<- 0 to fin){
      if(!plusPetit(i,i+1)){
        echange(i,i+1)
        fin=false
      }
    }
    for(i <- fin+1 to debut by -1){
      if(!plusPetit(i,i+1)){
        echange(i,i+1)
        fin=false
      }
    }
  }
}